Write the beginning of Docker Content Trust

--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -243,3 +243,11 @@ note={\url{https://blog.docker.com/2015/04/faster-and-better-image-distribution-
 year={2016},
 month={mai}
 }
+
+@misc{blog_docker_content_trust,
+title={{Introducing Docker Content Trust}},
+author={{Diogo Mónica}},
+note={\url{https://blog.docker.com/2015/08/content-trust-docker-1-8/}},
+year={2016},
+month={mai}
+}
