--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -251,3 +251,10 @@ note={\url{https://blog.docker.com/2015/08/content-trust-docker-1-8/}},
 year={2016},
 month={mai}
 }
+
+@misc{github_docker_kernel_capabilities,
+title={{Default kernel capabilities}},
+note={\url{https://github.com/docker/docker/blob/master/oci/defaults_linux.go#L64-L79}},
+year={2016},
+month={mai}
+}
