--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -258,3 +258,13 @@ note={\url{https://github.com/docker/docker/blob/master/oci/defaults_linux.go#L6
 year={2016},
 month={mai}
 }
+
+@misc{marek_goldmann_res_mgmt,
+title={{Resource management in Docker}},
+author={{Marek Goldmann}},
+note={\url{https://goldmann.pl/blog/2014/09/11/resource-management-in-docker/}},
+year={2016},
+month={mai}
+}
+
+
